--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ jobs:
           # this fetches all history so that we can read each commit
           fetch-depth: 0
       - name: Generate Changelog
-        run: .github/release_message.sh > release_message.md
+        run: git update-index --chmod=+x ./.github/release_message.sh > release_message.md
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
